[package]
edition = "2021"
name = "rp_usbi"
version = "0.1.0"
authors = ["Kezi <keziolio123@gmail.com>"]
resolver = "2"
#rust-version = "stable"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-futures = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
#embassy-usb-logger = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy.git" }
usbd-hid = "0.8.2"

#sigma_tcp_rs = {git="git@github.com:Kezii/sigma_tcp_esp32.git"}


defmt = "1.0"
defmt-rtt = "1.0"
fixed = "1.29.0"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.9.1"


embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
#embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.11", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.3"
pio = "0.3.0"
rand = { version = "0.9.1", default-features = false }

[profile.release]
debug = 2

# Below configs are here to mute the rust-analyzer error.
# "Can't find crate for 'test'" as this is a no_std project
[[bin]]
name = "rp_usbi"
test = false
bench = false
